--- a/hks/src/main/webapp/WEB-INF/include/include-header.jspf
+++ b/hks/src/main/webapp/WEB-INF/include/include-header.jspf
@@ -2,11 +2,12 @@
  
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-<title>first</title>
+<title>hks</title>
  
 <%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
 <%@ taglib prefix="fn" uri="http://java.sun.com/jsp/jstl/functions" %> 
- 
+ <%@ taglib prefix="fmt" uri="http://java.sun.com/jsp/jstl/fmt" %>
+
 <link rel="stylesheet" type="text/css" href="<c:url value='/css/ui.css'/>" />
  
 <!-- jQuery -->
